--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,18 +5,21 @@ updates:
     target-branch: "dev"
     schedule:
       interval: "daily"
-    assignee: webersni
+    assignees: 
+      - "webersni"
 
   - package-ecosystem: "docker"
     directory: "/"
     target-branch: "dev"
     schedule:
       interval: "weekly"
-    assignee: webersni
+    assignees: 
+      - "webersni"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     target-branch: "dev"
     schedule:
       interval: "daily"
-    assignee: webersni
+    assignees:
+      - "webersni"
