--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==1.5.3
 certifi==2020.6.20
 chardet==3.0.4
 Django==3.0.8
+djangorestframework==3.11.0
 idna==2.10
 isort==4.3.21
 lazy-object-proxy==1.4.3
