--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+appdirs==1.4.4
 asgiref==3.2.10
 astroid==2.4.2
+attrs==19.3.0
 autopep8==1.5.3
+black==19.10b0
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
 Django==3.0.8
 djangorestframework==3.11.0
 idna==2.10
@@ -13,11 +17,13 @@ mccabe==0.6.1
 numba==0.50.1
 numpy==1.19.1
 pandas==1.0.5
+pathspec==0.8.0
 pkg-resources==0.0.0
-pycodestyle==2.6.0
+psycopg2==2.8.5
 pylint==2.5.3
 python-dateutil==2.8.1
 pytz==2020.1
+regex==2020.7.14
 requests==2.24.0
 six==1.15.0
 sqlparse==0.3.1
