Add linting tools to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,35 @@ attrs==19.3.0
 autopep8==1.5.3
 black==19.10b0
 certifi==2020.6.20
+cfgv==3.2.0
 chardet==3.0.4
 click==7.1.2
+distlib==0.3.1
 Django==3.0.8
 djangorestframework==3.11.0
+filelock==3.0.12
+flake8==3.8.3
+identify==1.4.25
 idna==2.10
+importlib-metadata==1.7.0
+importlib-resources==3.0.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 llvmlite==0.33.0
 mccabe==0.6.1
+nodeenv==1.4.0
 numba==0.50.1
 numpy==1.19.1
 pandas==1.0.5
 pathspec==0.8.0
+pre-commit==2.6.0
 psycopg2==2.8.5
+pycodestyle==2.6.0
+pyflakes==2.2.0
 pylint==2.5.3
 python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 regex==2020.7.14
 requests==2.24.0
 six==1.15.0
@@ -29,4 +41,6 @@ sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
 urllib3==1.25.10
+virtualenv==20.0.30
 wrapt==1.12.1
+zipp==3.1.0
