--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
-line-length = 88
-target-version = ['py36', 'py37', 'py38']
+line-length = 79
+target-version = ['py36']
 exclude = '''
 /(
     \.git
