--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click==7.1.2
 distlib==0.3.1
 Django==3.0.8
 djangorestframework==3.11.0
+djangorestframework-csv==2.1.0
 filelock==3.0.12
 flake8==3.8.3
 identify==1.4.25
@@ -40,6 +41,7 @@ six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
+unicodecsv==0.14.1
 urllib3==1.25.10
 virtualenv==20.0.30
 wrapt==1.12.1
