--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,12 @@ jobs:
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
-        # Stop the build if there are Python syntax errors or undefined names
+        # Stop the build if there are Python syntax errors or undefined names.
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # Show pycodestyle warnings but exit with zero anyway.
         flake8 . --count --exit-zero --statistics --max-line-length=127
+    - name: Run unit tests
+      run: |
+        coverage run --branch --source='src/' src/manage.py test src/
+        # Fail under 50%.
+        coverage report --fail-under=50
