--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,8 +4,27 @@ repos:
     hooks:
       - id: black
         language_version: python3.6
-  -   repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v3.2.0
-      hooks:
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.5.2
+    hooks:
+      - id: isort
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.782
+    hooks:
+      - id: mypy
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.3
+    hooks:
+      - id: flake8
+        args: [
+          '--select=E9,F63,F7,F82', '--show-source'
+        ]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
+    hooks:
       - id: requirements-txt-fixer
       - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: debug-statements
+      - id: check-added-large-files
