--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,32 @@
+[tool.poetry]
+name = "data-api"
+version = "0.1.0"
+description = "Perfolio's django-based data API"
+authors = ["Perfolio"]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.6.9"
+Django = "^3.1.1"
+numpy = "^1.19.2"
+pandas = "^1.1.2"
+djangorestframework = "^3.11.1"
+djangorestframework-csv = "^2.1.0"
+djangorestframework-xml = "^2.0.0"
+drf-renderer-xlsx = "^0.3.7"
+psycopg2 = "^2.8.6"
+uvicorn = "^0.11.8"
+requests = "^2.24.0"
+
+[tool.poetry.dev-dependencies]
+black = "^20.8b1"
+coverage = "^5.2.1"
+flake8 = "^3.8.3"
+mypy = "^0.782"
+isort = "^5.5.2"
+flake8-docstrings = "^1.5.0"
+pre-commit = "^2.7.1"
+
 [tool.black]
 line-length = 90
 target-version = ['py36']
@@ -9,3 +38,9 @@ exclude = '''
     | \venv
 )/
 '''
+
+[tool.isort]
+profile = "black"
+line_length = 90
+combine_as_imports = true
+src_paths = ["src"]
