--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -11,29 +11,45 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        # Look to see if there is a cache hit for the corresponding requirements file
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          ${{ runner.os }}-
-    - name: Install dependencies
+
+    - name: Install poetry and config
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install poetry
+        poetry config settings.virtualenvs.in-project false
+        poetry config settings.virtualenvs.path ~/.virtualenvs
+
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ~/.virtualenvs
+        key: poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          poetry-${{ hashFiles('**/poetry.lock') }}
+
+    - name: Upgrade pip
+      run: poetry run python -m pip install pip -U
+
+    - name: Install dependencies
+      run: |
+        poetry install
+      if: steps.cache.outputs.cache-hit != 'true'
+
+    - name: Run pre-commit
+    - uses: pre-commit/action@v2.0.0
+
     - name: Lint with flake8
       run: |
         # Stop the build if there are Python syntax errors or undefined names.
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --select=E9,F63,F7,F82 --show-source
         # Show pycodestyle warnings but exit with zero anyway.
-        flake8 . --count --exit-zero --statistics --max-line-length=127
+        flake8 . --exit-zero --max-line-length=127
 
   test:
     runs-on: ubuntu-latest
@@ -43,31 +59,41 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        # Look to see if there is a cache hit for the corresponding requirements file
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-          ${{ runner.os }}-
-    - name: Install dependencies
+
+    - name: Install poetry and config
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install poetry
+        poetry config settings.virtualenvs.in-project false
+        poetry config settings.virtualenvs.path ~/.virtualenvs
+
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ~/.virtualenvs
+        key: poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          poetry-${{ hashFiles('**/poetry.lock') }}
+
+    - name: Upgrade pip
+      run: poetry run python -m pip install pip -U
+
+    - name: Install dependencies
+      run: |
+        poetry install
+      if: steps.cache.outputs.cache-hit != 'true'
+
     - name: Run unit tests
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
-
       run: |
-        coverage run --branch --source='src/' src/manage.py test src/
-        # Fail under 50%.
-        coverage report --fail-under=50
+        make test
     - name: Report to codecov
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
