--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
 
     - name: Run pre-commit
-    - uses: pre-commit/action@v2.0.0
+      uses: pre-commit/action@v2.0.0
 
     - name: Lint with flake8
       run: |
