--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,8 @@ repos:
     hooks:
       - id: flake8
         args: [
-          '--select=E9,F63,F7,F82', '--show-source'
+          '--select=E9,F63,F7,F82',
+          '--show-source'
         ]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
