--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,24 +21,11 @@ jobs:
       run: |
         pip install poetry
         poetry config virtualenvs.in-project false
-        poetry config virtualenvs.path ~/.virtualenvs
-
-    - name: Cache Poetry virtualenv
-      uses: actions/cache@v1
-      id: cache
-      with:
-        path: ~/.virtualenvs
-        key: poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          poetry-${{ hashFiles('**/poetry.lock') }}
-
-    - name: Upgrade pip
-      run: poetry run python -m pip install pip -U
 
     - name: Install dependencies
       run: |
+        poetry run python -m pip install pip -U
         poetry install
-      if: steps.cache.outputs.cache-hit != 'true'
 
     - name: Run pre-commit
       uses: pre-commit/action@v2.0.0
@@ -68,24 +55,11 @@ jobs:
       run: |
         pip install poetry
         poetry config virtualenvs.in-project false
-        poetry config virtualenvs.path ~/.virtualenvs
-
-    - name: Cache Poetry virtualenv
-      uses: actions/cache@v1
-      id: cache
-      with:
-        path: ~/.virtualenvs
-        key: poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          poetry-${{ hashFiles('**/poetry.lock') }}
-
-    - name: Upgrade pip
-      run: poetry run python -m pip install pip -U
 
     - name: Install dependencies
       run: |
+        poetry run python -m pip install pip -U
         poetry install
-      if: steps.cache.outputs.cache-hit != 'true'
 
     - name: Run unit tests
       env:
