--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
         pip install poetry
         poetry config virtualenvs.in-project false
 
+    - uses: actions/cache@v2
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
     - name: Install dependencies
       run: |
         poetry run python -m pip install pip -U
