--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,21 +17,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install poetry and config
-      run: |
-        pip install poetry
-        poetry config virtualenvs.in-project false
-
-    - uses: actions/cache@v2
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-
-    - name: Install dependencies
-      run: |
-        poetry run python -m pip install pip -U
-        poetry install
-
     - name: Run pre-commit
       uses: pre-commit/action@v2.0.0
 
@@ -54,7 +39,14 @@ jobs:
         pip install poetry
         poetry config virtualenvs.in-project false
 
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: ~/.cache/pypoetry/virtualenvs
+        key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
     - name: Install dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         poetry run python -m pip install pip -U
         poetry install
