--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ djangorestframework = "^3.11.1"
 djangorestframework-csv = "^2.1.0"
 djangorestframework-xml = "^2.0.0"
 drf-renderer-xlsx = "^0.3.7"
-psycopg2 = "^2.8.6"
 uvicorn = "^0.11.8"
 requests = "^2.24.0"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
