--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ drf-renderer-xlsx = "^0.3.8"
 uvicorn = "^0.12.1"
 requests = "^2.24.0"
 psycopg2-binary = "^2.8.6"
+django-cors-headers = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
