--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,4 +29,18 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: perfolio/api-data:latest
+          tags: perfolio/api-data:lates
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    name: Deploy
+
+    steps:
+    - name: executing remote ssh terraform apply
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.DEPLOY_HOST }}
+        username: ${{ secrets.DEPLOY_USER }}
+        key: ${{ secrets.DEPLOY_KEY }}
+        port: ${{ secrets.DEPLOY_PORT }}
+        script: cd ~/deploy/prod && sh run.sh
