--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: perfolio/api-data:lates
+          tags: perfolio/api-data:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build
